# background_runtime

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  analysis_options.yaml  pubspec.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
background_runtime/: CHANGELOG.md  README.md  pubspec.yaml
background_runtime/lib/: background_runtime.dart
background_runtime/test/: background_runtime_test.dart
background_runtime_android/: CHANGELOG.md  README.md  pubspec.yaml
background_runtime_android/android/: build.gradle.kts  settings.gradle.kts
background_runtime_android/android/src/main/: AndroidManifest.xml
background_runtime_android/android/src/main/kotlin/dev/mixin27/background_runtime_android/: AudioPlayerManager.kt  BackgroundRuntimeAndroidPlugin.kt  BackgroundRuntimeService.kt  BackgroundRuntimeServiceManager.kt  BootReceiver.kt  DownloadManager.kt  PublicStorageResolver.kt
background_runtime_android/android/src/main/kotlin/dev/mixin27/background_runtime_android/database/: AppDatabase.kt  DatabaseProvider.kt
background_runtime_android/android/src/test/kotlin/dev/mixin27/background_runtime_android/: BackgroundRuntimeAndroidPluginTest.kt
background_runtime_android/lib/: background_runtime_android.dart
background_runtime_android/lib/src/: background_runtime_android_plugin.dart
background_runtime_ios/: CHANGELOG.md  README.md  pubspec.yaml
background_runtime_ios/ios/: background_runtime_ios.podspec
background_runtime_ios/ios/background_runtime_ios/: Package.swift
background_runtime_ios/ios/background_runtime_ios/Sources/background_runtime_ios/: AudioManager.swift  BackgroundRuntimeIosPlugin.swift  DownloadManager.swift  NotificationManager.swift  PersistenceManager.swift
background_runtime_ios/lib/: background_runtime_ios.dart
background_runtime_ios/lib/src/: background_runtime_ios_plugin.dart
background_runtime_linux/: CHANGELOG.md  README.md  pubspec.yaml
background_runtime_linux/lib/: background_runtime_linux.dart
background_runtime_linux/lib/src/: background_runtime_linux_plugin.dart
background_runtime_linux/linux/: CMakeLists.txt  background_runtime_linux_plugin.cc  background_runtime_linux_private.h
background_runtime_linux/linux/include/background_runtime_linux/: background_runtime_linux_plugin.h
background_runtime_linux/linux/test/: background_runtime_linux_plugin_test.cc
background_runtime_macos/: CHANGELOG.md  README.md  pubspec.yaml
background_runtime_macos/lib/: background_runtime_macos.dart
background_runtime_macos/lib/src/: background_runtime_macos_plugin.dart
background_runtime_macos/macos/: background_runtime_macos.podspec
background_runtime_macos/macos/background_runtime_macos/: Package.swift
background_runtime_macos/macos/background_runtime_macos/Sources/background_runtime_macos/: AudioManager.swift  BackgroundRuntimeMacosPlugin.swift  DownloadManager.swift  NotificationManager.swift  PersistenceManager.swift
background_runtime_platform_interface/: CHANGELOG.md  README.md  pubspec.yaml
background_runtime_platform_interface/lib/: background_runtime_platform_interface.dart
background_runtime_platform_interface/lib/src/exceptions/: background_runtime_exception.dart
background_runtime_platform_interface/lib/src/method_channel/: method_channel_background_runtime.dart
background_runtime_platform_interface/lib/src/models/: audio_track.dart  download_event.dart  download_request.dart  player_state.dart  runtime_config.dart  runtime_lifecycle.dart
background_runtime_platform_interface/lib/src/platform/: background_runtime_platform.dart  fake_background_runtime.dart
background_runtime_platform_interface/test/exceptions/: background_runtime_exception_test.dart
background_runtime_platform_interface/test/models/: audio_track_test.dart  download_event_test.dart  download_request_test.dart  player_state_test.dart  runtime_config_test.dart  runtime_lifecycle_test.dart
background_runtime_platform_interface/test/platform/: background_runtime_platform_test.dart  fake_background_runtime_test.dart  method_channel_background_runtime_test.dart
background_runtime_web/: CHANGELOG.md  README.md  pubspec.yaml
background_runtime_web/lib/: background_runtime_web.dart
background_runtime_web/lib/src/: background_runtime_web_plugin.dart
background_runtime_windows/: CHANGELOG.md  README.md  pubspec.yaml
background_runtime_windows/lib/: background_runtime_windows.dart
background_runtime_windows/lib/src/: background_runtime_windows_plugin.dart
background_runtime_windows/windows/: CMakeLists.txt  background_runtime_windows_c_api.cpp  background_runtime_windows_plugin.cpp  background_runtime_windows_plugin.h
background_runtime_windows/windows/include/background_runtime_windows/: background_runtime_windows_c_api.h
background_runtime_windows/windows/test/: background_runtime_windows_plugin_test.cpp
example/: CHANGELOG.md  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/pages/: audio_page.dart  downloads_page.dart  init_page.dart  lifecycle_page.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
tool/: publish.sh  version.sh
(+7 files in other folders)
